force-app/main/default/objects/Custom_Note__c/fields/Account_Holders__c.field-meta.xml
<CustomField>
    <fullName>Account_Holders__c</fullName>
    <description>The Account Holders Names from the Akahu Report</description>
    <label>Account Holders</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>