force-app/main/default/objects/Custom_Note__c/fields/Address_City__c.field-meta.xml
<CustomField>
    <fullName>Address_City__c</fullName>
    <description>cloudCheckRawResult.verification.details.address.city</description>
    <label>City</label>
    <length>112</length>
    <type>Text</type>
</CustomField>