force-app/main/default/objects/Custom_Note__c/fields/Address_Country__c.field-meta.xml
<CustomField>
    <fullName>Address_Country__c</fullName>
    <description>cloudCheckRawResult.verification.details.address.countryCode</description>
    <label>Country</label>
    <length>112</length>
    <type>Text</type>
</CustomField>