force-app/main/default/objects/Custom_Note__c/fields/Address_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Address_Postal_Code__c</fullName>
    <description>cloudCheckRawResult.verification.details.address.postcode</description>
    <label>Postal Code</label>
    <length>112</length>
    <type>Text</type>
</CustomField>