force-app/main/default/objects/Custom_Note__c/fields/Address_Street__c.field-meta.xml
<CustomField>
    <fullName>Address_Street__c</fullName>
    <description>cloudCheckRawResult.verification.details.address.street</description>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>