force-app/main/default/objects/Custom_Note__c/fields/Address_Suburb__c.field-meta.xml
<CustomField>
    <fullName>Address_Suburb__c</fullName>
    <description>cloudCheckRawResult.verification.details.address.suburb</description>
    <label>Suburb</label>
    <length>112</length>
    <type>Text</type>
</CustomField>