force-app/main/default/objects/Custom_Note__c/fields/Address_Validated__c.field-meta.xml
<CustomField>
    <fullName>Address_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>cloudCheckRawResult.verification.validated.address</description>
    <label>Address Validated</label>
    <type>Checkbox</type>
</CustomField>