force-app/main/default/objects/Custom_Note__c/fields/Akahu_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Akahu_Account_Number__c</fullName>
    <description>The Account Number provided from Akahu report</description>
    <label>Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>