force-app/main/default/objects/Custom_Note__c/fields/Akahu_Bank__c.field-meta.xml
<CustomField>
    <fullName>Akahu_Bank__c</fullName>
    <description>The Bank of the customer provided from akahu report</description>
    <label>Bank</label>
    <length>112</length>
    <type>Text</type>
</CustomField>