force-app/main/default/objects/Custom_Note__c/fields/Akahu_Provided_Address__c.field-meta.xml
<CustomField>
    <fullName>Akahu_Provided_Address__c</fullName>
    <description>The address from Akahu Report</description>
    <label>Address</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>