force-app/main/default/objects/Custom_Note__c/fields/Akahu_Reference__c.field-meta.xml
<CustomField>
    <fullName>Akahu_Reference__c</fullName>
    <description>The reference related tot he Akahu check</description>
    <label>Akahu Reference</label>
    <length>112</length>
    <type>Text</type>
</CustomField>