force-app/main/default/objects/Custom_Note__c/fields/Akahu_Report__c.field-meta.xml
<CustomField>
    <fullName>Akahu_Report__c</fullName>
    <description>The Link that leads to the Bank verification report</description>
    <label>Akahu Report</label>
    <type>Url</type>
</CustomField>