force-app/main/default/objects/Custom_Note__c/fields/Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Birth__c</fullName>
    <description>cloudCheckRawResult.verification.details.dateofbirth</description>
    <label>Date Of Birth</label>
    <type>Date</type>
</CustomField>