force-app/main/default/objects/Custom_Note__c/fields/Date_Of_Birth_Validated__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Birth_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>cloudCheckRawResult.verification.validated.dateofbirth</description>
    <label>Date Of Birth Validated</label>
    <type>Checkbox</type>
</CustomField>