force-app/main/default/objects/Custom_Note__c/fields/Family_Name__c.field-meta.xml
<CustomField>
    <fullName>Family_Name__c</fullName>
    <description>cloudCheckRawResult.verification.details.name.family</description>
    <label>Family Name</label>
    <length>112</length>
    <type>Text</type>
</CustomField>