force-app/main/default/objects/Custom_Note__c/fields/Given_Name__c.field-meta.xml
<CustomField>
    <fullName>Given_Name__c</fullName>
    <description>cloudCheckRawResult.verification.details.name.given</description>
    <label>Given Name</label>
    <length>112</length>
    <type>Text</type>
</CustomField>