force-app/main/default/objects/Custom_Note__c/fields/Name_Validated__c.field-meta.xml
<CustomField>
    <fullName>Name_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>cloudCheckRawResult.verification.validated.name</description>
    <label>Name Validated</label>
    <type>Checkbox</type>
</CustomField>