force-app/main/default/objects/Custom_Note__c/fields/Pep_Matched__c.field-meta.xml
<CustomField>
    <fullName>Pep_Matched__c</fullName>
    <defaultValue>false</defaultValue>
    <description>cloudCheckPepMatched</description>
    <label>Pep Matched</label>
    <type>Checkbox</type>
</CustomField>