force-app/main/default/objects/Custom_Note__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Holds the Tile of the note</description>
    <label>Title</label>
    <type>TextArea</type>
</CustomField>