force-app/main/default/objects/Custom_Note__c/fields/Verification_Reference__c.field-meta.xml
<CustomField>
    <fullName>Verification_Reference__c</fullName>
    <description>Verification reference</description>
    <label>Verification Reference</label>
    <length>112</length>
    <type>Text</type>
</CustomField>