force-app/main/default/objects/Custom_Note__c/recordTypes/Akahu_Failure.recordType-meta.xml
<RecordType>
    <fullName>Akahu_Failure</fullName>
    <active>true</active>
    <label>AkahuResult</label>
</RecordType>