force-app/main/default/objects/Custom_Note__c/recordTypes/Cloudcheck.recordType-meta.xml
<RecordType>
    <fullName>Cloudcheck</fullName>
    <active>true</active>
    <description>Events related to cloudcheck results</description>
    <label>Cloudcheck</label>
</RecordType>