force-app/main/default/objects/Custom_Note__c/recordTypes/Note_Type.recordType-meta.xml
<RecordType>
    <fullName>Note_Type</fullName>
    <active>true</active>
    <label>Note Type</label>
</RecordType>